05_ponteiros/pont_06/Resultados/Rafael/completo/result_compilation.txt
main.c: In function ‘main’:
main.c:15:21: error: incompatible type for argument 1 of ‘EhIgual’
   15 |     while (!EhIgual(data, dataFim))
      |                     ^~~~
      |                     |
      |                     tData {aka struct Data}
In file included from main.c:3:
data.h:79:21: note: expected ‘tData *’ {aka ‘struct Data *’} but argument is of type ‘tData’ {aka ‘struct Data’}
   79 | int EhIgual( tData *data1, tData *data2 );
      |              ~~~~~~~^~~~~
main.c:15:27: error: incompatible type for argument 2 of ‘EhIgual’
   15 |     while (!EhIgual(data, dataFim))
      |                           ^~~~~~~
      |                           |
      |                           tData {aka struct Data}
In file included from main.c:3:
data.h:79:35: note: expected ‘tData *’ {aka ‘struct Data *’} but argument is of type ‘tData’ {aka ‘struct Data’}
   79 | int EhIgual( tData *data1, tData *data2 );
      |                            ~~~~~~~^~~~~
main.c:17:21: error: incompatible type for argument 1 of ‘ImprimeData’
   17 |         ImprimeData(data);
      |                     ^~~~
      |                     |
      |                     tData {aka struct Data}
In file included from main.c:3:
data.h:39:26: note: expected ‘tData *’ {aka ‘struct Data *’} but argument is of type ‘tData’ {aka ‘struct Data’}
   39 | void ImprimeData( tData *data );
      |                   ~~~~~~~^~~~
